--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
 
 <body>
     <section class="principal container">
-        <div class="container__caixa">
-            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-                único.</h1>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+        <div class="container__caixa" >
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar Pass+ e o On-line por um preço único.</h1>
+            <img src="jogos legais.png" alt="" class="container__imagem">
+            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 35,00*</a>
+            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Passe+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
 
     <section class="container secundario">
-        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="monitor.png" alt="" class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
-                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            <h2 class="descricao__titulo">Jogue do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou Jogue no tablet, laptop, celular e outros
+                aparelhos. Nossa lista de jogos não para de crescer!!!</p>
         </div>
     </section>
 
     <section class="container secundario">
         <div class="container__descricao">
             <p class="descricao__texto">
-                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
-                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                Só o Pass+ oferece o Pass+ e o On-Line juntos para você ter acesso a jogos de diversos gêneros da
+                tecnologia e se divertir até não querer mais, onde e como quiser.
             </p>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Passe+</a>
         </div>
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <img src="tela jogos.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="image-removebg-preview.png" alt=""
             class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
-                você, até mesmo sem internet.</p>
+            <h2 class="descricao__titulo">Baixe seus jogos</h2>
+            <p class="descricao__texto">Baixe e jogue quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet!</p>
         </div>
     </section>
     
@@ -57,22 +56,22 @@
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="img/tv.png" alt="Ícone de televisão">
+                <img src="teve.png" alt="">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="img/computador.png" alt="Ícone de computador">
+                <img src="pc1.png" alt="">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
-                <img src="img/celular.png" alt="Ícone de celular">
+                <img src="celulares.jfif" alt="">
                 <h3 class="lista__item">Celular</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <img src="img/Logo.png" alt="" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
                 <a href="#">Idioma</a>
@@ -96,10 +95,10 @@
                 <a href="#">Ajuda</a>
             </li>
         </ul>
-        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
+        <p class="rodape__texto">® 2021 Passe, Passe+ e On-Line. Todos os direitos reservados. Serviço de
             assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
-            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
+        <p class="rodape__texto">Pass+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
+            serviço Passe+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
             Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
     </footer>
 </body>
